# wav2letter

./: CMakeLists.txt  Train.cpp
cmake/: BuildCUB.cmake
inference/: CMakeLists.txt
inference/inference/common/: CMakeLists.txt
inference/inference/decoder/: Decoder.cpp
inference/inference/examples/: AudioToWords.cpp  AudioToWords.h  CMakeLists.txt  InteractiveStreamingASRExample.cpp  MultithreadedStreamingASRExample.cpp  SimpleStreamingASRExample.cpp
inference/inference/module/: CMakeLists.txt
inference/inference/module/feature/: CMakeLists.txt
inference/inference/module/nn/: CMakeLists.txt
recipes/data/combined/: callhome.py  check_audio.py  combine_ami.py  convert_len.py  fisher.py  prepare.py  swbd.py  utils.py  wsj.py  wsj_utils.py
recipes/data/timit/: prepare.py
recipes/models/sota/2019/am_arch/: am_transformer_ctc.arch  am_transformer_s2s.arch  am_transformer_s2s_librivox.arch
recipes/models/sota/2019/librispeech/: train_am_transformer_ctc_new.cfg  train_am_transformer_s2s.cfg  (+1 more)
recipes/models/streaming_convnets/combined/: decode_500ms_right_future_ngram_other.cfg  train_am_500ms_combined_10000.cfg  train_am_500ms_combined_from_libri.cfg  train_am_500ms_combined_new.cfg
recipes/models/streaming_convnets/librispeech/: train_am_500ms_future_context.cfg
recipes/models/utilities/: convert_sp.py  create_lexicon.py  prepare_combined_wp_and_official_lexicon.py  prepare_librispeech_wp_and_official_lexicon.py  reset_vocab.py  sentencepiece_model_pb2.py
src/common/: Defines.cpp  Defines.h
src/data/: Sound.cpp  Utils.cpp  Utils.h  W2lBlobsDataset.cpp  W2lDataset.cpp  W2lDataset.h  W2lListFilesDataset.cpp  W2lListFilesDataset.h
src/libraries/criterion/: CMakeLists.txt
src/libraries/decoder/: LexiconDecoder.cpp  LexiconFreeDecoder.cpp  Utils.h
tools/: AddSAUG.cpp  CMakeLists.txt  StreamingRecognize.cpp  StreamingTDSModelConverter.cpp
(+6 files in other folders)
